--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  generic_bloc_provider: ^2.1.1
+  firebase_core: ^1.12.0
+  google_sign_in:
+  firebase_storage: ^10.2.7
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^3.3.7
+  cloud_firestore: ^3.1.8
+
 
 dev_dependencies:
   flutter_test:
