--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+    	<string>Platzi Trips requiere tomar una foto. ¿Podemos user tú cámara?</string>
+    	<key>NSPhotoLibraryUsageDescription</key>
+    	<string>Platzi Trips requiere tomar una foto. ¿Podemos user tú cámara?</string>
+    	<key>NSMicrophoneUsageDescription</key>
+    	<string>Platzi Trips requiere tomar una foto. ¿Podemos user tú cámara?</string>
 </dict>
 </plist>
