--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^3.3.7
   cloud_firestore: ^3.1.8
+  image_picker: ^0.8.4+11
 
 
 dev_dependencies:
